# flashcutter

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODEX_PROJECT_HANDOFF.md  DEPLOYMENT.md  MVP_ROADMAP.md  PROJECT_CONTEXT.md  README.md  TRIAL_V0_1_RELEASE.md  WORKFLOW.md  docker-compose.trial.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py  template_library.py
backend/app/api/: routes.py
backend/app/services/: auth.py  comfyui_client.py  creative_reference_importer.py  ffmpeg.py  opening_copy.py  output_presets.py  storage.py  system_music.py  task_queue.py  template_compiler.py  template_v3_compiler.py  text_detection.py
backend/app/services/ai_asset_factory/: __init__.py
backend/app/services/ai_asset_factory/asset_library/: __init__.py
backend/app/services/ai_asset_factory/generators/: __init__.py  base.py
backend/app/services/ai_asset_factory/postprocess/: __init__.py
backend/app/services/ai_asset_factory/providers/: __init__.py  base.py  runway_provider.py
backend/scripts/: batch_import_ai_assets.py  batch_import_assets.py  import_creative_references.py  import_open_music.py  init_trial_user.py  seed_system_music.py  smoke_backend.py
backend/tests/: test_api_smoke.py  test_drawtext_font.py  test_ffmpeg_filters.py  test_health.py  test_models.py  test_opening_copy.py  test_render_validation.py  test_safe_area_filter.py  test_subtitle_bar_normalize.py  test_template_cards.py  test_template_library.py
docs/: AICF_REQUIREMENTS.md  CODEX_GUIDE.md  (+11 more)
(+66 files in other folders)
