[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flashcutter-backend"
version = "0.1.0"
description = "Backend MVP for flashcutter"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "python-multipart>=0.0.20",
    "pydantic>=2.8.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["storage*"]
